# mazeNet

./: SmartChase 4.0.txt  ssh-agent.exe.stackdump
MazeNet-Client-master-old/: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
MazeNet-Client-master-old/scripts/: mazenet.all.sh  mazenet.debug.sh  mazenet.md.sh  mazenet.mr.sh  mazenet.release.sh
MazeNet-Client-master-old/scripts/cmake/: Findassimp.cmake
MazeNet-Client-master-old/src/: CMakeLists.txt  Constants.hpp  main.cpp
MazeNet-Client-master-old/src/exception/: Exception.hpp
MazeNet-Client-master-old/src/messaging/: CMakeLists.txt  MessageDispatcher.cpp  MessageDispatcher.hpp  MessageHandler.cpp  MessageHandler.hpp  mazeCom.cxx  mazeCom.hxx  mazeCom.ixx
MazeNet-Client-master-old/src/network/: .gitignore  CMakeLists.txt  TcpClient.cpp  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpMessage.cpp  TcpMessage.hpp  TcpServer.cpp  TcpServer.hpp
MazeNet-Client-master-old/src/player/: Board.cpp  Board.hpp  CMakeLists.txt  Card.hpp  GameSituation.cpp  GameSituation.hpp  HeuristicSettings.hpp  HeuristicStrategy.cpp  HeuristicStrategy.hpp  IPlayerStrategy.cpp  IPlayerStrategy.hpp  Move.cpp  Move.hpp  MoveCalculator.cpp  MoveCalculator.hpp  Player.hpp  Position.cpp  Position.hpp
MazeNet-Client-master-old/src/util/: CMakeLists.txt
MazeNet-Client-master-old/src/util/cfg/: CMakeLists.txt  CfgException.hpp  CfgManager.cpp  CfgManager.hpp  Config.hpp.in  JSONConfig.cpp  JSONConfig.hpp  ProgramOptions.cpp  ProgramOptions.hpp
MazeNet-Client-master-old/src/util/logging/: CMakeLists.txt  Log.cpp  Log.hpp  LogManager.cpp  LogManager.hpp
mazenet-server/: README.md
mazenet-server-master-new/: README.md
mazenet-server-master-new/src/Timeouts/: SendMessageTimeout.java
mazenet-server-master-new/src/XSD/: mazeCom.xsd
mazenet-server-master-new/src/client/: AI.java  AIMain.java  Card.java  CardPositionUtils.java  Direction.java  IArtificialIntelligence.java  LoginHandler.java  LoginHandler_old.java  MazeNetClient.java  PrioritizedLinkedList.java
mazenet-server-master-new/src/clientPackages/client/: Game.java  ImplementationKI.java  InterfaceKI.java  Player.java
mazenet-server-master-new/src/clientPackages/networking/: Connection.java  Messages.java  UTFInputStream.java  UTFOutputStream.java  XmlInStream.java  XmlOutStream.java
mazenet-server-master-new/src/networking/: XmlInStream.java  XmlOutStream.java  messages.properties
mazenet-server-master-new/src/networkingClient/: ServerConnection.java  ServerListener.java
mazenet-server-master-new/src/server/: Board.java  Player.java
mazenet-server-master-new/src/server/userInterface/: BetterUI.java  GraphicalCardBuffered.java  StreamToTextArea.java  UI.java
mazenet-server-master-new/src/server/userInterface/resources/: 00_start_template.xcf
mazenet-server/src/JAXB/: AcceptMessageType.java  AwaitMoveMessageType.java  BoardType.java  CardType.java  DisconnectMessageType.java  ErrorType.java  LoginMessageType.java  LoginReplyMessageType.java  MazeCom.java  MazeComType.java  MoveMessageType.java  ObjectFactory.java  PositionType.java  TreasureType.java  TreasuresToGoType.java  WinMessageType.java
mazenet-server/src/Timeouts/: TimeOutManager.java
mazenet-server/src/download/: UTFInputStream.java  UTFOutputStream.java
mazenet-server/src/networking/: Connection.java  LoginThread.java  MazeComMessageFactory.java
mazenet-server/src/server/: Card.java  Game.java  messages.properties
mazenet-server/src/server/userInterface/: BetterUI.java  GraphicalCardBuffered.java  ImageResources.java  messages.properties
mazenet-server/src/tools/: Debug.java
